another project 2.html

--- a/.vscode/Another project 2.html
+++ b/.vscode/Another project 2.html
@@ -50,7 +50,7 @@ p {
 </ul>
 
 <ol>
-  <li>Mehhhhnn this is just fun am enjoying this stuff, just imagine what am doing coding everything from A-Z without even looling at anypages<br> passtor thank you so much</li>
+  <li>Mehhhhnn this is just fun am enjoying this stuff</li>
   <li>Truly when you have wisdom is truly</li>
 </ol>
 <button> Jah bless</button>
